statefulset/nosdnc.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: nonrtric
  labels:
    name: nonrtric
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: StatefulSet
metadata:
  name: a1-interface-osc
  namespace: nonrtric
  labels:
    app: a1-sim
spec:
  selector:
    matchLabels:
      app: a1-sim
  replicas: 2
  serviceName: a1-sim
  template:
    metadata:
      labels:
        app: a1-sim
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10002/o-ran-sc/a1-simulator:2.1.0
        ports:
        - name: http
          containerPort: 8085
        - name: https
          containerPort: 8185
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: StatefulSet
metadata:
  name: a1-interface-std
  namespace: nonrtric
  labels:
    app: a1-sim
spec:
  selector:
    matchLabels:
      app: a1-sim
  replicas: 2
  serviceName: a1-sim
  template:
    metadata:
      labels:
        app: a1-sim
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10002/o-ran-sc/a1-simulator:2.1.0
        ports:
        - name: http
          containerPort: 8085
        - name: https
          containerPort: 8185
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: StatefulSet
metadata:
  name: a1-interface-std-v2
  namespace: nonrtric
  labels:
    app: a1-sim
spec:
  selector:
    matchLabels:
      app: a1-sim
  replicas: 2
  serviceName: a1-sim
  template:
    metadata:
      labels:
        app: a1-sim
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10002/o-ran-sc/a1-simulator:2.1.0
        ports:
        - name: http
          containerPort: 8085
        - name: https
          containerPort: 8185
---
apiVersion: v1
kind: Service
metadata:
  name: a1-sim
  namespace: nonrtric
  labels:
    app: a1-sim
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8085
    targetPort: 8085
  - name: https
    port: 8185
    targetPort: 8185
  selector:
    app: a1-sim
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: a1-interface-std
#   namespace: nonrtric
#   labels:
#     app: a1-interface-std
# spec:
#   type: NodePort
#   ports:
#   - name: http
#     port: 8085
#     targetPort: 8085
#   - name: https
#     port: 8185
#     targetPort: 8185
#   selector:
#     app: a1-interface-std
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: policy-agent-container
  namespace: nonrtric
  labels:
    app: policy-agent-container
spec:
  selector:
    matchLabels:
      app: policy-agent-container
  replicas: 1
  template:
    metadata:
      labels:
        app: policy-agent-container
    spec:
      containers:
      - name: master
        image: nexus3.onap.org:10003/onap/ccsdk-oran-a1policymanagementservice:1.2.0
        ports:
        - name: http
          containerPort: 8081
        - name: https
          containerPort: 8433
        volumeMounts:
        - name: "config"
          mountPath: "/opt/app/policy-agent/data/application_configuration.json"
          subPath: "application_configuration.json"
      volumes:
        - name: "config"
          configMap:
            name: "config"
---
apiVersion: v1
kind: Service
metadata:
  name: policy-agent-container
  namespace: nonrtric
  labels:
    app: policy-agent-container
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  - name: https
    port: 8433
    targetPort: 8433
  selector:
    app: policy-agent-container

---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: controlpanel
  namespace: nonrtric
  labels:
    app: controlpanel
spec:
  selector:
    matchLabels:
      app: controlpanel
  replicas: 1
  template:
    metadata:
      labels:
        app: controlpanel
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10004/o-ran-sc/nonrtric-controlpanel:2.2.0
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8082
        volumeMounts:
        - name: "config"
          mountPath: "/etc/nginx/nginx.conf"
          subPath: "nginx.conf"
      volumes:
        - name: "config"
          configMap:
            name: "config"
---
apiVersion: v1
kind: Service
metadata:
  name: controlpanel
  namespace: nonrtric
  labels:
    app: controlpanel
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8082
    targetPort: 8082
  selector:
    app: controlpanel

---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nonrtric-gateway
  namespace: nonrtric
  labels:
    app: nonrtric-gateway
spec:
  selector:
    matchLabels:
      app: nonrtric-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: nonrtric-gateway
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10004/o-ran-sc/nonrtric-gateway:1.0.0
        ports:
        - name: http
          containerPort: 9090
        volumeMounts:
        - name: "config"
          mountPath: "/opt/app/nonrtric-gateway/config/application.yaml"
          subPath: "application.yaml"
      volumes:
        - name: "config"
          configMap:
            name: "config"
---
apiVersion: v1
kind: Service
metadata:
  name: nonrtric-gateway
  namespace: nonrtric
  labels:
    app: nonrtric-gateway
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9090
    targetPort: 9090
  selector:
    app: nonrtric-gateway


---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: enrichmentservice
  namespace: nonrtric
  labels:
    app: enrichmentservice
spec:
  selector:
    matchLabels:
      app: enrichmentservice
  replicas: 1
  template:
    metadata:
      labels:
        app: enrichmentservice
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10004/o-ran-sc/nonrtric-enrichment-coordinator-service:1.2.0
        ports:
        - name: http
          containerPort: 8083
        - name: https
          containerPort: 8434
---
apiVersion: v1
kind: Service
metadata:
  name: enrichmentservice
  namespace: nonrtric
  labels:
    app: enrichmentservice
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8083
    targetPort: 8083
  - name: https
    port: 8434
    targetPort: 8434
  selector:
    app: enrichmentservice
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: producer
  namespace: nonrtric
  labels:
    app: producer
spec:
  selector:
    matchLabels:
      app: producer
  replicas: 1
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
      - name: master
        image: eexit/mirror-http-server
        ports:
        - name: http
          containerPort: 9082
        - name: https
          containerPort: 8434
---
apiVersion: v1
kind: Service
metadata:
  name: producer
  namespace: nonrtric
  labels:
    app: producer
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9082
    targetPort: 9082
  - name: https
    port: 8434
    targetPort: 8434
  selector:
    app: producer
