statefulset/sdnc.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: nonrtric
  labels:
    name: nonrtric
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: StatefulSet
metadata:
  name: a1-interface-osc
  namespace: nonrtric
  labels:
    app: a1-sim
spec:
  selector:
    matchLabels:
      app: a1-sim
  replicas: 2
  serviceName: a1-sim
  template:
    metadata:
      labels:
        app: a1-sim
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10004/o-ran-sc/a1-simulator:2.1.0
        ports:
        - name: http
          containerPort: 8085
        - name: https
          containerPort: 8185
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: StatefulSet
metadata:
  name: a1-interface-std
  namespace: nonrtric
  labels:
    app: a1-sim
spec:
  selector:
    matchLabels:
      app: a1-sim
  replicas: 2
  serviceName: a1-sim
  template:
    metadata:
      labels:
        app: a1-sim
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10004/o-ran-sc/a1-simulator:2.1.0
        ports:
        - name: http
          containerPort: 8085
        - name: https
          containerPort: 8185
---
apiVersion: v1
kind: Service
metadata:
  name: a1-sim
  namespace: nonrtric
  labels:
    app: a1-sim
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8085
    targetPort: 8085
  - name: https
    port: 8185
    targetPort: 8185
  selector:
    app: a1-sim
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: a1-interface-std
#   namespace: nonrtric
#   labels:
#     app: a1-interface-std
# spec:
#   type: NodePort
#   ports:
#   - name: http
#     port: 8085
#     targetPort: 8085
#   - name: https
#     port: 8185
#     targetPort: 8185
#   selector:
#     app: a1-interface-std
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: policy-agent-container
  namespace: nonrtric
  labels:
    app: policy-agent-container
spec:
  selector:
    matchLabels:
      app: policy-agent-container
  replicas: 1
  template:
    metadata:
      labels:
        app: policy-agent-container
    spec:
      containers:
      - name: master
        image: nexus3.onap.org:10003/onap/ccsdk-oran-a1policymanagementservice:1.1.1-STAGING-latest
        ports:
        - name: http
          containerPort: 8081
        - name: https
          containerPort: 8433
        volumeMounts:
        - name: "config"
          mountPath: "/opt/app/policy-agent/data/application_configuration.json"
          subPath: "application_configuration.json"
      volumes:
        - name: "config"
          configMap:
            name: "config"
---
apiVersion: v1
kind: Service
metadata:
  name: policy-agent-container
  namespace: nonrtric
  labels:
    app: policy-agent-container
spec:
  type: NodePort
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  - name: https
    port: 8433
    targetPort: 8433
  selector:
    app: policy-agent-container

---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: controlpanel
  namespace: nonrtric
  labels:
    app: controlpanel
spec:
  selector:
    matchLabels:
      app: controlpanel
  replicas: 1
  template:
    metadata:
      labels:
        app: controlpanel
    spec:
      containers:
      - name: master
        image: nexus3.o-ran-sc.org:10004/o-ran-sc/nonrtric-controlpanel:2.1.1
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: controlpanel
  namespace: nonrtric
  labels:
    app: controlpanel
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8082
    targetPort: 8082
  selector:
    app: controlpanel
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: a1-controller
  namespace: nonrtric
  labels:
    app: a1-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: a1-controller
  template:
    metadata:
      labels:
        app: a1-controller
    spec:
      hostname: a1-controller
      containers:
        - name: a1-controller
          image: nexus3.o-ran-sc.org:10004/o-ran-sc/nonrtric-a1-controller:2.0.1
          imagePullPolicy: IfNotPresent
          command:
            - /opt/onap/sdnc/bin/startODL.sh
          ports:
            - name: http
              containerPort: 8181
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8181
            initialDelaySeconds: 15
            periodSeconds: 15
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: nonrtric
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: sdnc-db-container
          image: mysql/mysql-server:5.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
---
kind: Service
apiVersion: v1
metadata:
  name: a1-controller
  namespace: nonrtric
  labels:
    app: a1-controller
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8181
      protocol: TCP
      targetPort: 8282
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    app: a1-controller
---
apiVersion: v1
kind: Service
metadata:
  name: dbhost
  namespace: nonrtric
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: db
---
apiVersion: v1
kind: Service
metadata:
  name: sdnctldb01
  namespace: nonrtric
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: db
